Fix hero header layout on mobile

--- a/css/intro.css
+++ b/css/intro.css
@@ -45,7 +45,7 @@
   background-color: #fff;
   background-image: url('images/otoron_landing_hero.webp');
   background-size: cover;
-  background-position: right center;
+  background-position: center center;
   background-repeat: no-repeat;
 }
 
